--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Facebook Auth Callback</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>Authentication Complete</h1>
+    <p>You have successfully authenticated. You can now return to the app.</p>
+    <script>
+        // 从 URL 中提取授权码
+        const urlParams = new URLSearchParams(window.location.search);
+        const code = urlParams.get('code');
+
+        if (code) {
+            // 将授权码发送回 Unity 应用
+            window.location.href = `unity://callback?code=${code}`;
+        }
+    </script>
 </body>
 </html>
